# smart-kages-movement

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
notebooks/: 01_parse_data_into_df.ipynb  02_load_kages_as_movement_ds.ipynb  03_QC_and_cleaning.ipynb  03_clean_data.ipynb  03_diagnostic_plots.ipynb  04_select_data_for_analysis.ipynb  05_best_week_overview.ipynb  05_diagnostic_plots.ipynb  05_speed_and_occupancy.ipynb  06_actograms.ipynb  07_circadian_metrics.ipynb  circadian_metrics_notes.md  load_data.ipynb  parse_data.ipynb
smart_kages_movement/: __init__.py  datetime.py  io.py  loading.py  metrics.py  plots.py  reports.py
